# koi

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: editor.rs  key_checker.rs  main.rs
src/editor/: buffer.rs  command_bar.rs  cursor.rs  file_info.rs  line.rs  mod.rs  position.rs  size.rs  status_bar.rs  terminal.rs  text_fragment.rs  view.rs
tests/fixtures/: load.md
