[package]
name = "koi"
version = "0.1.0"
authors = ["kawarimidoll <https://github.com/kawarimidoll>"]
edition = "2021"
homepage = "https://github.com/kawarimidoll/koi"
repository = "https://github.com/kawarimidoll/koi"
readme = "README.md"
default-run = "koi"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[[bin]]
name = "key_checker"
path = "src/key_checker.rs"
